@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.997 2009-02-17 18:26:55 castaglia Exp $
+$Id: NEWS,v 1.998 2009-02-18 18:01:43 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -51,6 +51,7 @@ CVS
 - Bug 3189 - Linker errors occur when using "make -j" parallel builds.
   ProFTPD now builds successfully using "make -jN", where N is the number
   of simultaneous build processes to use.
+- Bug 3176 - Postgres chokes on standard charset names.
 
 1.3.2 - Released 5-Feb-2009
 --------------------------------
